# AI-Debate-Club

./: .gitignore  README.md  pyproject.toml
debateclub/: CLAUDE.md  __main__.py  cli.py  client.py  config.py  judge.py  models.py  orchestrator.py  prompts.py  report.py  web.py
debateclub/static/: style.css
debateclub/templates/: base.html  index.html  results.html
